loopdowhile.LoopDoWhile.scala.error
Compilation error:
LoopDoWhile:3: error: ')' expected but '}' found.
	}
        ^